--- a/README.org
+++ b/README.org
@@ -360,6 +360,16 @@ We can also ask for the complement of a set class:
 : (SetClass([0, 4, 8]), with rho = (0,10,4,1,8,5,11,2,3,9,6,7), phi = (1,9)(2,5)(3,8)(4,6)(7,10).  Prime form: (048),
 :  SetClass([1, 2, 3, 5, 6, 7, 9, 10, 11]), with rho = (0,10,4,1,8,5,11,2,3,9,6,7), phi = (1,9)(2,5)(3,8)(4,6)(7,10).  Prime form: (0t4185e36))
 
+We can ask for the interval vectors as well:
+
+#+begin_src sage
+  sc.interval_vector(), sc1.interval_vector(), sc2.interval_vector()
+#+end_src
+
+#+RESULTS:
+: ([0, 0, 0, 3, 0, 0], [2, 1, 0, 0, 0, 0], [0, 2, 0, 1, 0, 0])
+
+
 And we can ask for class sums:
 
 #+begin_src sage
